--- a/index.html
+++ b/index.html
@@ -1072,24 +1072,26 @@
                             <a href="https://www.linkedin.com/in/jkiimala/" target="_blank">
                                 <i class="fa-brands fa-linkedin-in"></i>
                             </a>
+
+                            <a href="https://www.instagram.com/jarnokiimala" target="_blank">
+                                <i class="fab fa-instagram"></i> 
+                            </a> 
+
                             <a href="https://bsky.app/profile/jkiimala.bsky.social" target="_blank">
                                 <i class="fa-brands fa-bluesky"></i>
                             </a>
+
                             <a href="https://x.com/JKiimala" target="_blank">
                                 <i class="fa-brands fa-x-twitter"></i>
                             </a>
-                            <!--
-                            <a href="https://www.instagram.com/jarnokiimala" target="_blank">
-                                <i class="fab fa-instagram"></i> 
-                                </a> 
-                            -->
+                            
                             <a href="https://github.com/jkiimala?tab=repositories" target="_blank">
                                 <i class="fa-brands fa-github"></i>
                             </a>
 
-                            <a href="https://linktr.ee/jarnokiimala" target="_blank">
+                           <!-- <a href="https://linktr.ee/jarnokiimala" target="_blank">
                                 <i class="fas fa-link"></i>
-                            </a>
+                            </a> -->
                                 
 
                             </div>
