--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="author" content="Jarno Kiimala">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
-    <title>Jarno Kiimala | Knowledge Management and Leadership</title>
+    <title>Jarno Kiimala | Strategic Project Management</title>
 
     
     <link rel="icon" type="image/x-icon" href="img/favicon.ico">
@@ -1050,7 +1050,7 @@
                                     <span>Education</span>
                                 </div>
                                 <p>
-                                    Software Developer | B.Eng (Industrial Management)
+                                    Web Developer | B.Eng (Industrial Management)
                                 </p>
                             </div>
                             
