--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     
-    <meta name="description" content="Front-End Development - 3D Modeling - Industrial Engineering">
-    <meta name="keywords" content="JavaScript, Python, Bootstrap 5, Tailwind CSS, 
-    React, digimarkkinointi, wordpress, ohjelmointi, software developer, koodari, insinööri, tuotantotalous">
+    <meta name="description" content="Web Development - Prompt Engineering - Strategic Project Management">
+    <meta name="keywords" content="HTML5, CSS3, JavaScript, Bootstrap 5, Tailwind CSS, 
+    React.js, digimarkkinointi, WordPress, Software Developer, koodari, insinööri, tuotantotalous, verkkokauppa">
     <meta name="author" content="Jarno Kiimala">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
-    <title>Jarno Kiimala | Strategic Project Management</title>
+    <title>Jarno Kiimala | Strategic Project Management & Prompt Engineering</title>
 
     
     <link rel="icon" type="image/x-icon" href="img/favicon.ico">
