--- a/index.html
+++ b/index.html
@@ -982,16 +982,7 @@
                     </div>
                 </div>
 
-                <div class="portfolio-item">
-                    <div class="image">
-                        <img src="img/valio.webp" alt="Jarno Kiimala - Lemmy">
-                    </div>
-                    <div class="hover-items">
-                        <h3>Marketing Plän Study - Case Lemmy</h3>
-                        
-                    </div>
-                </div>
-
+               
                 <div class="portfolio-item">
                     <div class="image">
                         <img src="img/knowhow.webp" alt="Jarno Kiimala - Projects: Knowledge Management">
@@ -1074,9 +1065,9 @@
                                 <i class="fa-brands fa-linkedin-in"></i>
                             </a>
 
-                            <a href="https://www.instagram.com/jarnokiimala" target="_blank">
+                           <!-- <a href="https://www.instagram.com/jarnokiimala" target="_blank">
                                 <i class="fab fa-instagram"></i> 
-                            </a> 
+                            </a> -->
 
                             <a href="https://bsky.app/profile/jkiimala.bsky.social" target="_blank">
                                 <i class="fa-brands fa-bluesky"></i>
