--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="left-header">
                 
                 <div class="image" id="image">
-                    <img src="img/projectManagement.webp" id="main-image" alt="Jarno Kiimala | Strategic Project Management - Successful Projects and Initiatives">
+                    <img src="img/agile.webp" id="main-image" alt="Jarno Kiimala | Strategic Project Management - Successful Projects and Initiatives">
                 </div>
             </div>
             <div class="right-header">
