--- a/index.html
+++ b/index.html
@@ -954,7 +954,7 @@
                         <img src="img/innovation.webp" alt="Jarno Kiimala - Project: Innovations and Product Development">
                     </div>
                     <div class="hover-items">
-                        <h3>Innovations and Product Development Project</h3>
+                        <h3>Innovations & Product Development Project</h3>
                         <div class="icons">
                               
                         </div>
@@ -1031,7 +1031,7 @@
                         <img src="img/knowhow.webp" alt="Jarno Kiimala - Projects: Knowledge Management">
                     </div>
                     <div class="hover-items">
-                        <h3>Remote Team Projects</h3>
+                        <h3>Several KM Projects</h3>
                         <div class="icons">
                               
                         </div>
