--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
 
         <section class="container" id="portfolio">
             <div class="main-title">
-                <h2><i class="fa-solid fa-code"></i> <span>Remote </span> Project<span class="bg-text"></span>s</h2>
+                <h2><i class="fa-solid fa-code"></i> Remote <span>Team Projects<span class="bg-text"></span></h2>
                 
             </div> 
             
