--- a/index.html
+++ b/index.html
@@ -701,6 +701,21 @@
                 <div class="portfolio-item">
                     
                     <div class="image">
+                        <img src="img/NB.webp" alt="Imaginary NB website - Jarno Kiimala - website">
+
+                    </div>
+                    <div class="hover-items">
+                        <h3>Website Example utilizing AI</h3>
+                        <div class="icons">
+                            <a href="https://nbwebsite.netlify.app/" id="NBwebsite" target="_blank" class="icon">
+                                <i class="fab fa-github"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item">
+                    
+                    <div class="image">
                         <img src="img/cart.webp" alt="Ostoskärry - Jarno Kiimala - App">
 
                     </div>
@@ -1177,7 +1192,7 @@
             <i class="fas fa-code"></i>
         </div>
         <div class="control" data-id="contact">
-            <i class='far fa-address-card'></i>
+            <i class="fa-solid fa-handshake"></i>
         </div>         
     </div>
 
