--- a/index.html
+++ b/index.html
@@ -1135,9 +1135,9 @@
                                 <i class="fa-brands fa-github"></i>
                             </a>
 
-                           <!-- <a href="https://linktr.ee/jarnokiimala" target="_blank">
-                                <i class="fas fa-link"></i>
-                            </a> -->
+                           <a href="https://bolt.new/?rid=4y4w24" target="_blank">
+                                <i class="fa-solid fa-bolt"></i>
+                            </a> 
                                 
 
                             </div>
