--- a/index.html
+++ b/index.html
@@ -701,6 +701,21 @@
                 <div class="portfolio-item">
                     
                     <div class="image">
+                        <img src="img/mafia.webp" alt="Mafias Pizza&Bar - Jarno Kiimala - website">
+
+                    </div>
+                    <div class="hover-items">
+                        <h3>Mafia´s Pizza&Bar</h3>
+                        <div class="icons">
+                            <a href="https://mafiaspizzabar.netlify.app/" id="MafiasPizza&Bar" target="_blank" class="icon">
+                                <i class="fas fa-link"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item">
+                    
+                    <div class="image">
                         <img src="img/NB.webp" alt="Imaginary NB website - Jarno Kiimala - website">
 
                     </div>
@@ -708,7 +723,7 @@
                         <h3>Website Example utilizing AI</h3>
                         <div class="icons">
                             <a href="https://nbwebsite.netlify.app/" id="NBwebsite" target="_blank" class="icon">
-                                <i class="fab fa-github"></i></a>
+                                <i class="fas fa-link"></i></a>
                         </div>
                     </div>
                 </div>
