--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
                 <div class="portfolio-item">
                     
                     <div class="image">
-                        <img src="img/mafia.webp" alt="Mafias Pizza&Bar - Jarno Kiimala - website">
+                        <img src="img/mafia.webp" alt="Mafias Pizza&Bar in NY, USA - Jarno Kiimala - Website">
 
                     </div>
                     <div class="hover-items">
@@ -716,7 +716,7 @@
                 <div class="portfolio-item">
                     
                     <div class="image">
-                        <img src="img/NB.webp" alt="Imaginary NB website - Jarno Kiimala - website">
+                        <img src="img/NB.webp" alt="Imaginary Nordic Build Construction Company Website - Jarno Kiimala - Website">
 
                     </div>
                     <div class="hover-items">
