--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
                         <div class="carousel-item" role="listitem"><img src="img/trello.webp" alt="trello">
                         <div class="carousel-item" role="listitem"><img src="img/miro.webp" alt="miro">
                         <div class="carousel-item" role="listitem"><img src="img/slack.webp" alt="slack">
-                        <div class="carousel-item" role="listitem"><img src="img/chatgpt.webp" alt="ai">
+                        <div class="carousel-item" role="listitem"><img src="img/chatgpt.webp" alt="chatgpt ai">
+                        <div class="carousel-item" role="listitem"><img src="img/bolt.webp" alt="bolt.new ai">
                         <div class="carousel-item" role="listitem"><img src="img/solikkalogo.webp" alt="solidworks">
                         <div class="carousel-item" role="listitem"><img src="img/inventorlogo.webp" alt="inventorPro">
                         <div class="carousel-item" role="listitem"><img src="img/adobelogo.webp" alt="adobeCC">
@@ -91,9 +92,10 @@
                         <div class="carousel-item" role="listitem"><img src="img/officelogo.webp" alt="office">
                         <div class="carousel-item" role="listitem"><img src="img/wordpresslogo.webp" alt="wordpress">
                         <div class="carousel-item" role="listitem"><img src="img/woo2.webp" alt="WooCommerce">
+                        <div class="carousel-item" role="listitem"><img src="img/shopify.webp" alt="Shopify">
                         <div class="carousel-item" role="listitem"><img src="img/cash.webp" alt="MyCashflow">
                     </div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div>
-                </div></div>
+                </div></div></div></div>
                 </div></div>
 
             
