--- a/index.html
+++ b/index.html
@@ -1136,11 +1136,11 @@
                                 <i class="fa-brands fa-linkedin-in"></i>
                             </a>
 
-                           <!-- <a href="https://www.instagram.com/jarnokiimala" target="_blank">
+                            <a href="https://www.instagram.com/jarnokiimala" target="_blank">
                                 <i class="fab fa-instagram"></i> 
-                            </a> -->
+                            </a>
 
-                            <a href="https://bsky.app/profile/jkiimala.bsky.social" target="_blank">
+                            <!--<a href="https://bsky.app/profile/jkiimala.bsky.social" target="_blank">
                                 <i class="fa-brands fa-bluesky"></i>
                             </a>
 
@@ -1150,7 +1150,7 @@
                             
                             <a href="https://github.com/jkiimala?tab=repositories" target="_blank">
                                 <i class="fa-brands fa-github"></i>
-                            </a>
+                            </a> -->
 
                            <a href="https://bolt.new/?rid=4y4w24" target="_blank">
                                 <i class="fa-solid fa-bolt"></i>
