--- a/index.html
+++ b/index.html
@@ -835,7 +835,7 @@
                     </div>
                 </div>
 
-                <div class="portfolio-item">
+                <!--<div class="portfolio-item">
                     
                     <div class="image">
                         <img src="img/clicker3.webp" alt="Beer Clicker - Jarno Kiimala - JavaScript Game">
@@ -864,7 +864,7 @@
                                 <i class="fab fa-github"></i></a>
                         </div>
                     </div>
-                </div>
+                </div>-->
 
                 <div class="portfolio-item">
                     
