--- a/index.html
+++ b/index.html
@@ -707,8 +707,11 @@
 
                     </div>
                     <div class="hover-items">
-                        <h3>Breathe Free - Quit Smoking App Demo</h3>
-                        
+                        <h3>Use link to open in Expo Go.</h3>
+                        <div class="icons">
+                            <a href="https://quit-smoking-today-7qu56pr.rork.app/" id="Quit Smoking" target="_blank" class="icon">
+                                <i class="fas fa-link"></i></a>
+                        </div>
                     </div>
                 </div>
 
