--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="right-header">
                 
                 <h1 class="name">
-                     Successful <span>Projects </span>and initiatives!</h1><br>
+                     AI-Powered <span>Solutions </span>for Tomorrow.</h1><br>
                     
                      <div class="scene">
                         <div class="text" id="animatedText">Continuous Improvement</div>
