--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
 
                     </div>
                     <div class="hover-items">
-                        <h3>Breathe Free - Quit Smoking</h3>
+                        <h3>Quit Smoking - Demo App</h3>
                         <div class="icons">
                            <a href="https://quit-smoking-today-53715ag.rork.app/" id="Quit Smoking App" target="_blank" class="icon">
                                 <i class="fas fa-link"></i></a> 
