--- a/index.html
+++ b/index.html
@@ -1129,7 +1129,7 @@
                                     <span>Education</span>
                                 </div>
                                 <p>
-                                    Web Developer | B.Eng (Industrial Management)
+                                    Industrial Management Engineer
                                 </p>
                             </div>
                             
