--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         
                 <div class="timeline-item">
                     <div class="tl-icon">
-                        <i class="fas fa-briefcase"></i>
+                        <i class="fa-solid fa-user-graduate"></i>
                     </div>
                     <!-- <p class="tl-duration">2013 - 2017</p> -->
                     <h5>Industrial Engineering and Management<span> - Lapland University of Applied Sciences</span></h5>
