--- a/index.html
+++ b/index.html
@@ -854,7 +854,7 @@
                     </div>
                 </div>
 
-                <div class="portfolio-item">
+                <!--<div class="portfolio-item">
                     <div class="image">
                         <img src="img/rock.webp" alt="Jarno Kiimala - 2D animation - Rock Reindeer">
                     </div>
@@ -929,7 +929,7 @@
                                 <i class="fab fa-github"></i></a>
                         </div>
                     </div>
-                </div>
+                </div>-->
 
                                
 
@@ -1003,7 +1003,7 @@
                         <img src="img/prodplan.webp" alt="Jarno Kiimala - Production Planning & Conrol">
                     </div>
                     <div class="hover-items">
-                        <h3>Production Planning & Conrol</h3>
+                        <h3>Production Planning & Control</h3>
                         <div class="icons">
                               
                         </div>
