--- a/index.html
+++ b/index.html
@@ -1174,9 +1174,9 @@
                                 <i class="fa-brands fa-linkedin-in"></i>
                             </a>
 
-                            <a href="https://www.instagram.com/jarnokiimala" target="_blank">
+                            <!--<a href="https://www.instagram.com/jarnokiimala" target="_blank">
                                 <i class="fab fa-instagram"></i> 
-                            </a>
+                            </a>-->
 
                             <!--<a href="https://bsky.app/profile/jkiimala.bsky.social" target="_blank">
                                 <i class="fa-brands fa-bluesky"></i>
@@ -1184,11 +1184,11 @@
 
                             <a href="https://x.com/JKiimala" target="_blank">
                                 <i class="fa-brands fa-x-twitter"></i>
-                            </a>
+                            </a>-->
                             
                             <a href="https://github.com/jkiimala?tab=repositories" target="_blank">
                                 <i class="fa-brands fa-github"></i>
-                            </a> -->
+                            </a>
 
                            <a href="https://bolt.new/?rid=4y4w24" target="_blank">
                                 <i class="fa-solid fa-bolt"></i>
