--- a/index.html
+++ b/index.html
@@ -703,6 +703,20 @@
                <div class="portfolio-item">
                     
                     <div class="image">
+                        <img src="img/rahoitus.webp" alt="Projektirahoitus ja budjetointi - Jarno Kiimala">
+
+                    </div>
+                    <div class="hover-items">
+                        <h3>Projektirahoitus ja budjetointi</h3>
+                        <div class="icons">
+                           <a href="https://projektirahoitus.netlify.app/" id="Projektirahoitus" target="_blank" class="icon">
+                                <i class="fas fa-link"></i></a> 
+                    </div>
+                </div></div>
+
+               <div class="portfolio-item">
+                    
+                    <div class="image">
                         <img src="img/engineer.webp" alt="Industrial Management Engineer Demo Website - Jarno Kiimala">
 
                     </div>
