--- a/index.html
+++ b/index.html
@@ -771,6 +771,21 @@
                 <div class="portfolio-item">
                     
                     <div class="image">
+                        <img src="img/hairdude.webp" alt="Ammattitaitoista Hiustaidetta - Jarno Kiimala - Website">
+
+                    </div>
+                    <div class="hover-items">
+                        <h3>Website Demo</h3>
+                        <div class="icons">
+                            <a href="https://hairdude.netlify.app/" id="Hair Dude" target="_blank" class="icon">
+                                <i class="fas fa-link"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item">
+                    
+                    <div class="image">
                         <img src="img/mafia.webp" alt="Mafias Pizza&Bar in NY, USA - Jarno Kiimala - Website">
 
                     </div>
