--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                                 LNP Engineering Plastics Europe B.V.
                             </h4>
                             <p>
-                                Industrial Plastic Production Process Operations | Raamsdonksveer, The Netherlands
+                                Thermocomp Compound Production Process Operations | Raamsdonksveer, The Netherlands
                             </p>
                             
                         </div>
@@ -346,7 +346,7 @@
                                 Prime Sales Oy
                             </h4></a>
                             <p>
-                                Customizing electricity contracts with smart services to meet the customer needs | Tornio, Finland
+                                Solution Selling. Customizing electricity contracts with smart services to meet the customer needs | Tornio, Finland
                             </p>
                         </div>
                     </div>
@@ -361,7 +361,7 @@
                                 Hogpoint Oy
                             </h4></a>
                             <p>
-                                Marketing and sales of metal products | Oulainen, Finland
+                                Marketing, Sales and Surfacing of Metal Products | Oulainen, Finland
                             </p>
                         </div>
                     </div>
@@ -450,7 +450,7 @@
                                 Tamora Oy
                             </h4></a>
                             <p>
-                                Online Change Design Projects | Helsinki, Finland
+                                Online Change & Business Design Projects | Helsinki, Finland
                             </p>
                         </div>
                     </div>
