--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="left-header">
                 
                 <div class="image" id="image"> 
-                    <img src="img/intelli.webp" id="main-image" alt="Jarno Kiimala | Strategic Project Management - Successful Projects and Initiatives">
+                    <img src="img/intelligence.webp" id="main-image" alt="Jarno Kiimala | Strategic Project Management - Successful Projects and Initiatives">
                 </div>
             </div>
             <div class="right-header">
