--- a/index.html
+++ b/index.html
@@ -300,10 +300,10 @@
                         <img src="img/lnp.webp" alt="Jarno Kiimala - LNP Engineering Plastics">
                         <div class="blog-text">
                             <h4>
-                                LNP Engineering Plastics Europe B.V.
+                                LNP Engineering Plastics Europe
                             </h4>
                             <p>
-                                Thermocomp Compound Production Process Operations | Raamsdonksveer, The Netherlands
+                                Thermocomp Compound Production Process Operations. Raamsdonksveer | The Netherlands
                             </p>
                             
                         </div>
@@ -316,7 +316,7 @@
                                 IMS/Acer
                             </h4>
                             <p>
-                                Electronics Testing Process Operations of IBM & Acer Products | Tilburg, The Netherlands
+                                Electronics Testing Process Operations of IBM & Acer Products. Tilburg | The Netherlands
                             </p>
                         </div>
                     </div>
@@ -331,7 +331,7 @@
                                 NOKIA
                             </h4></a>
                             <p>
-                                Manufacturing Process of NOKIA mobile phones | Salo, Finland
+                                Manufacturing Process of NOKIA mobile phones. Salo | Finland
                             </p>
                         </div>
                     </div>
@@ -346,7 +346,7 @@
                                 Prime Sales Oy
                             </h4></a>
                             <p>
-                                Solution Selling. Customizing electricity contracts with smart services to meet the customer needs | Tornio, Finland
+                                Solution Selling. Customizing electricity contracts with smart services to meet the customer needs. Tornio | Finland
                             </p>
                         </div>
                     </div>
@@ -361,7 +361,7 @@
                                 Hogpoint Oy
                             </h4></a>
                             <p>
-                                Marketing, Sales and Surfacing of Metal Products | Oulainen, Finland
+                                Marketing, Sales and Surfacing of Metal Products. Oulainen | Finland
                             </p>
                         </div>
                     </div>
@@ -420,7 +420,7 @@
                                 The League of Finnish American Societies
                             </h4></a>
                             <p>
-                                The Wisconsin Project | Helsinki, Finland
+                                The Wisconsin Project | Helsinki | Finland
                             </p>
                         </div>
                     </div>
@@ -450,7 +450,7 @@
                                 Tamora Oy
                             </h4></a>
                             <p>
-                                Online Change & Business Design Projects | Helsinki, Finland
+                                Online Change & Business Design Projects. Helsinki | Finland
                             </p>
                         </div>
                     </div>
@@ -477,7 +477,7 @@
                                 Arctic Design Week
                             </h4></a>
                             <p>
-                                Lönnrot Project - 1000 Tales from Finland - Shortfilm about yakutian man living by the Lake Inari | Rovaniemi, Finland
+                                Lönnrot Project - 1000 Tales from Finland - Shortfilm about yakutian man living by the Lake Inari. Rovaniemi | Finland
                             </p>
                         </div>
                     </div>
@@ -492,7 +492,7 @@
                                 Ijahis Idja Music Festival
                             </h4>
                             <p>
-                                Music Video Production Project(Shoot & Edit) | Aanaar - Inari, Finland
+                                Music Video Production Project(Shoot & Edit). Aanaar | Inari | Finland
                             </p>
                         </div>
                     </div>
@@ -505,7 +505,7 @@
                                 Unna Junná | TV | Areena | yle.fi
                             </h4>
                             <p>
-                                Rock Bohccot - After Effects 2D animation Project | Inari, Finland
+                                Rock Bohccot - After Effects 2D animation Project. Inari | Finland
                             </p>
                         </div>
                     </div>
@@ -518,7 +518,7 @@
                                 Yle Sápmi
                             </h4>
                             <p>
-                                Sound Monitoring Project | Inari, Finland
+                                Sound Monitoring Project. Inari | Finland
                             </p>
                         </div>
                     </div>
@@ -531,7 +531,7 @@
                                 Skábmagovat Indigenous Film Festival
                             </h4>
                             <p>
-                                Aanaar - Inari, Finland
+                                Aanaar | Inari | Finland
                             </p>
                         </div>
                     </div>
@@ -547,7 +547,7 @@
                                 Puijo Restaurants
                             </h4>
                             <p>
-                                Hotel and Restaurant Management Projects | Kuopio, Finland
+                                Hotel and Restaurant Management Projects. Kuopio | Finland
                             </p>
                         </div>
                     </div>
@@ -560,7 +560,7 @@
                                 Hotel Savonia
                             </h4>
                             <p>
-                                Hotel and Restaurant Management Projects | Kuopio, Finland
+                                Hotel and Restaurant Management Projects. Kuopio | Finland
                             </p>
                         </div>
                     </div>
@@ -573,7 +573,7 @@
                                 Hotel Nuuksio
                             </h4>
                             <p>
-                                Digital Marketing Plan Project | Espoo, Finland
+                                Digital Marketing Plan Project. Espoo | Finland
                             </p>
                         </div>
                     </div>
