--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                         <div class="blog-text">
                             <a href="https://www.wisc.edu/" target="_blank">
                             <h4>
-                                The University of Wisconsin Madison
+                                The University of Wisconsin
                             </h4></a>
                             <p>
                                 The Wisconsin Project | Madison, WI, U.S.A.
@@ -417,7 +417,7 @@
                         <div class="blog-text">
                             <a href="https://www.samsuomi.fi/" target="_blank">
                             <h4>
-                                The League of Finnish American Societies
+                                The Finnish American Society
                             </h4></a>
                             <p>
                                 The Wisconsin Project | Helsinki | Finland
@@ -528,7 +528,7 @@
                         <img src="img/skabmagovat.webp" alt="Jarno Kiimala - Skabmagovat">
                         <div class="blog-text">
                             <h4>
-                                Skábmagovat Indigenous Film Festival
+                                Skábmagovat Film Festival
                             </h4>
                             <p>
                                 Aanaar | Inari | Finland
