--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
                         </div>
                     </div>
 
-                    <!--<div class="blog">
+                    <div class="blog">
                         <img src="img/ssgentre.webp" alt="Jarno Kiimala - SSG Entre">
                         <div class="blog-text">
                             <h4>
@@ -676,7 +676,7 @@
                                 SSG Standard Solutions Group AB, VALID:EXPIRED
                             </p>
                         </div>
-                    </div>-->
+                    </div>
 
                 </div>
 
