--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                         <img src="img/lnp.webp" alt="Jarno Kiimala - LNP Engineering Plastics">
                         <div class="blog-text">
                             <h4>
-                                LNP Engineering Plastics Europe
+                                LNP Engineering Plastics
                             </h4>
                             <p>
                                 Thermocomp Compound Production Process Operations. Raamsdonksveer | The Netherlands
@@ -477,7 +477,7 @@
                                 Arctic Design Week
                             </h4></a>
                             <p>
-                                Lönnrot Project - 1000 Tales from Finland - Shortfilm about yakutian man living by the Lake Inari. Rovaniemi | Finland
+                                Lönnrot Project. 1000 Tales from Finland. Shortfilm about yakutian man living by the Lake Inari. Rovaniemi | Finland
                             </p>
                         </div>
                     </div>
@@ -502,7 +502,7 @@
                         <img src="img/unnajunna.webp" alt="Unna Junná | TV | Areena | yle.fi">
                         <div class="blog-text">
                             <h4>
-                                Unna Junná | TV | Areena | yle.fi
+                                Unna Junná | Areena | yle.fi
                             </h4>
                             <p>
                                 Rock Bohccot - After Effects 2D animation Project. Inari | Finland
