--- a/index.html
+++ b/index.html
@@ -1151,11 +1151,11 @@
                             
                             <div class="contact-item">
                                 <div class="icon">
-                                    <i class="fas fa-globe"></i>
-                                    <span>Languages</span>
+                                    <i class="fa fa-trophy" aria-hidden="true"></i>
+                                    <span>Expertise</span>
                                 </div>
                                 <p>
-                                    Fin • Eng • Swe • Nor • Ger • Spa
+                                    Web Development • Artificial Intelligence
                                 </p>
                             </div>
                         </div>
