--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
                       </div>
                     
                     <div class="textHead">
-                    "Improving Efficiency and The Quality of Work."
+                    "Improving Efficiency and The Quality of Work." <br><br>
+                    <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i>
                     </div>
                     
             </div>
