--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     
-    <meta name="description" content="Web Development - Prompt Engineering - Strategic Project Management">
+    <meta name="description" content="Artificial Intelligence, Web Development, Prompt Engineering, Strategic Project Management">
     <meta name="keywords" content="Tekoäly, artificial intelligence, AI, Software Developer, koodari, insinööri, tuotantotalous">
     <meta name="author" content="Jarno Kiimala">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -1116,7 +1116,7 @@
 
                 <div class="contact-content-con">
                     <div class="left-contact">
-                        <h4>Wanna collaborate?</h4>
+                        <h4>Get Connected!</h4>
                         <p>
                             <p style="color:var(--color-secondary)">• Let's create something AMAZING together •</p>
                         
