--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
                     <h5>Python Programming<span> - The University of Helsinki | The Department of Computer Science</span></h5>
                     <img src="img/unihki.webp" alt="University of Helsinki - Jarno Kiimala - Python">
                     <p>
-                        MOOC 1-7 & 8-14 | Introduction to Programming + Advanced Course
-                        in Programming.
+                        MOOC 1-7 & 8-14 | Introduction to Python Programming + Advanced Course
+                        in Python Programming.
                     </p>
                 </div>
 
@@ -138,7 +138,7 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     
-                    <h5>3D CAD Design & Modeling<span> - TEAK OY - ONLINE</span></h5>
+                    <h5>3D Modeling | Design & Product Development<span> - TEAK OY - ONLINE</span></h5>
                     <img src="img/3DCAD.webp" alt="The Finnish Institute for Enterprise Management - Jarno Kiimala - SolidWorks & Inventor Pro">
                     <p>
                         Design & Product Development | 3D Models and 2D Drawings of Complex Parts and Assemblies
@@ -245,7 +245,7 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                        
-                    <h5>Hotel & Restaurant Management<span> - Savonia University of Applied Sciences</span></h5>
+                    <h5>Hotel and Restaurant Management<span> - Savonia University of Applied Sciences</span></h5>
                     <img src="img/savoniaSci.webp" alt="Savonia - Jarno Kiimala - Hotel & Restaurant Management">
                     <p>
                         Hotel Operations, 
