--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     
     <meta name="description" content="Artificial Intelligence, Web Development, Prompt Engineering, Strategic Project Management">
-    <meta name="keywords" content="Tekoäly, artificial intelligence, AI, Software Developer, koodari, insinööri, tuotantotalous">
+    <meta name="keywords" content="Tekoäly, artificial intelligence, AI, Software Developer, koodari, insinööri, tuotantotalous, Digitaalinen Media, Luova Sisällöntuotanto">
     <meta name="author" content="Jarno Kiimala">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
