--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     
-                    <h5>3D Modeling | Design & Product Development<span> - TEAK OY - ONLINE</span></h5>
+                    <h5>3D Modeling | Design and Product Development<span> - TEAK OY - ONLINE</span></h5>
                     <img src="img/3DCAD.webp" alt="The Finnish Institute for Enterprise Management - Jarno Kiimala - SolidWorks & Inventor Pro">
                     <p>
-                        Design & Product Development | 3D Models and 2D Drawings of Complex Parts and Assemblies
+                        Design and Product Development | 3D Models and 2D Drawings of Complex Parts and Assemblies
                         Utilizing SolidWorks & Autodesk Inventor Pro.
                     </p>
                 </div>
