--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
                         <div class="carousel-item" role="listitem"><img src="img/tailwind.webp" alt="tailwind">
                         <div class="carousel-item" role="listitem"><img src="img/sass.webp" alt="sass">
                         <div class="carousel-item" role="listitem"><img src="img/visualstudio.webp" alt="vscode">
+                        <div class="carousel-item" role="listitem"><img src="img/replit.webp" alt="replit ai">
+                        <div class="carousel-item" role="listitem"><img src="img/chatgpt.webp" alt="chatgpt ai">
+                        <div class="carousel-item" role="listitem"><img src="img/bolt.webp" alt="bolt.new ai">
                         <div class="carousel-item" role="listitem"><img src="img/github.webp" alt="github">
                         <div class="carousel-item" role="listitem"><img src="img/git.webp" alt="git">
                         <div class="carousel-item" role="listitem"><img src="img/githubCopilot.webp" alt="githubCopilot">
@@ -81,8 +84,6 @@
                         <div class="carousel-item" role="listitem"><img src="img/trello.webp" alt="trello">
                         <div class="carousel-item" role="listitem"><img src="img/miro.webp" alt="miro">
                         <div class="carousel-item" role="listitem"><img src="img/slack.webp" alt="slack">
-                        <div class="carousel-item" role="listitem"><img src="img/chatgpt.webp" alt="chatgpt ai">
-                        <div class="carousel-item" role="listitem"><img src="img/bolt.webp" alt="bolt.new ai">
                         <div class="carousel-item" role="listitem"><img src="img/solikkalogo.webp" alt="solidworks">
                         <div class="carousel-item" role="listitem"><img src="img/inventorlogo.webp" alt="inventorPro">
                         <div class="carousel-item" role="listitem"><img src="img/adobelogo.webp" alt="adobeCC">
@@ -97,7 +98,7 @@
                         <div class="carousel-item" role="listitem"><img src="img/shopify.webp" alt="Shopify">
                         <div class="carousel-item" role="listitem"><img src="img/cash.webp" alt="MyCashflow">
                     </div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div>
-                </div></div></div></div>
+                </div></div></div></div></div>
                 </div></div>
 
             <br><br> 
