--- a/index.html
+++ b/index.html
@@ -723,6 +723,20 @@
                <div class="portfolio-item">
                     
                     <div class="image">
+                        <img src="img/ajopaiva.webp" alt="Ajopaiväkirja - Jarno Kiimala">
+
+                    </div>
+                    <div class="hover-items">
+                        <h3>PROTOTYPE<br>Sähköposti: admin@ajopaivakirja.fi Salasana: admin789</h3>
+                        <div class="icons">
+                           <a href="https://preview.builtwithrocket.new/ajop-iv-kirja-5bdw747" id="Project Ajopaiva" target="_blank" class="icon">
+                                <i class="fas fa-link"></i></a> 
+                    </div>
+                </div></div>
+
+               <div class="portfolio-item">
+                    
+                    <div class="image">
                         <img src="img/momentum.webp" alt="Project Momentum - Demo - Jarno Kiimala">
 
                     </div>
