--- a/index.html
+++ b/index.html
@@ -316,13 +316,26 @@
                     </div>
                     <div class="blog">
                         
+                        <img src="img/IBM.webp" alt="Jarno Kiimala - IBM">
+                        <div class="blog-text">
+                            <h4>
+                                IMS
+                            </h4>
+                            <p>
+                                Electronics Testing Process Operations of IBM Products. Tilburg | The Netherlands
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="blog">
+                        
                         <img src="img/acer.webp" alt="Jarno Kiimala - Acer">
                         <div class="blog-text">
                             <h4>
-                                IMS/Acer
+                                IMS
                             </h4>
                             <p>
-                                Electronics Testing Process Operations of IBM & Acer Products. Tilburg | The Netherlands
+                                Electronics Testing Process Operations of Acer Products. Tilburg | The Netherlands
                             </p>
                         </div>
                     </div>
