--- a/index.html
+++ b/index.html
@@ -750,6 +750,20 @@
                <div class="portfolio-item">
                     
                     <div class="image">
+                        <img src="img/swot.webp" alt="Project SWOT - Jarno Kiimala">
+
+                    </div>
+                    <div class="hover-items">
+                        <h3>SWOT Analysis</h3>
+                        <div class="icons">
+                           <a href="https://staging-swot-analysis-tool-g382.frontend.encr.app/" id="Project Momentum" target="_blank" class="icon">
+                                <i class="fas fa-link"></i></a> 
+                    </div>
+                </div></div>
+
+               <div class="portfolio-item">
+                    
+                    <div class="image">
                         <img src="img/momentum.webp" alt="Project Momentum - Demo - Jarno Kiimala">
 
                     </div>
