--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                         <div class="carousel-item" role="listitem"><img src="img/tailwind.webp" alt="tailwind">
                         <div class="carousel-item" role="listitem"><img src="img/sass.webp" alt="sass">
                         <div class="carousel-item" role="listitem"><img src="img/visualstudio.webp" alt="vscode">
+                        <div class="carousel-item" role="listitem"><img src="img/LeapAI.webp" alt="Leap ai">
                         <div class="carousel-item" role="listitem"><img src="img/replit.webp" alt="replit ai">
                         <div class="carousel-item" role="listitem"><img src="img/chatgpt.webp" alt="chatgpt ai">
                         <div class="carousel-item" role="listitem"><img src="img/bolt.webp" alt="bolt.new ai">
@@ -98,7 +99,7 @@
                         <div class="carousel-item" role="listitem"><img src="img/shopify.webp" alt="Shopify">
                         <div class="carousel-item" role="listitem"><img src="img/cash.webp" alt="MyCashflow">
                     </div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div>
-                </div></div></div></div></div>
+                </div></div></div></div></div></div>
                 </div></div>
 
             <br><br> 
