--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                         <div class="carousel-item" role="listitem"><img src="img/git.webp" alt="git">
                         <div class="carousel-item" role="listitem"><img src="img/githubCopilot.webp" alt="githubCopilot">
                         <div class="carousel-item" role="listitem"><img src="img/mongodb.webp" alt="mongoDB">
+                        <div class="carousel-item" role="listitem"><img src="img/jira.webp" alt="jira">
                         <div class="carousel-item" role="listitem"><img src="img/trello.webp" alt="trello">
                         <div class="carousel-item" role="listitem"><img src="img/miro.webp" alt="miro">
                         <div class="carousel-item" role="listitem"><img src="img/slack.webp" alt="slack">
@@ -100,7 +101,7 @@
                         <div class="carousel-item" role="listitem"><img src="img/shopify.webp" alt="Shopify">
                         <div class="carousel-item" role="listitem"><img src="img/cash.webp" alt="MyCashflow">
                     </div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div>
-                </div></div></div></div></div></div></div>
+                </div></div></div></div></div></div></div></div>
                 </div></div>
 
             <br><br> 
