--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
     <meta name="google-site-verification" content="X73pKd22sUMAi-ti_wOb3d_HwjY92Vx-km-NPkTQUqc">
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BM6EWY7VB4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BM6EWY7VB4');
+</script>
+
 <body class="main-content">
    
     
